Fix whitespace

--- a/app/assets/stylesheets/gallery.css
+++ b/app/assets/stylesheets/gallery.css
@@ -16,7 +16,7 @@ font-family: 'Lato', sans-serif;
 
 .bannerz {
 
-  margin-top: 50px;
+  padding-top: 50px;
   color: #404850;
   text-align: center;
   font-family: 'Lato', sans-serif;
